
[TestPinDryRun/simple - 1]
{
  "version": 1,
  "rules": [
    {
      "action": "CONVERT",
      "selector": {
        "identifier": "docker-image://alpine:3.18",
        "matchType": "EXACT"
      },
      "updates": {
        "identifier": "docker-image://docker.io/library/alpine:3.18@sha256:0000000000000000000000000000000000000000000000000000000000000000"
      }
    }
  ]
}

---

[TestPinDryRun/multistage - 1]
{
  "version": 1,
  "rules": [
    {
      "action": "CONVERT",
      "selector": {
        "identifier": "docker-image://golang:1.21",
        "matchType": "EXACT"
      },
      "updates": {
        "identifier": "docker-image://docker.io/library/golang:1.21@sha256:0000000000000000000000000000000000000000000000000000000000000000"
      }
    },
    {
      "action": "CONVERT",
      "selector": {
        "identifier": "docker-image://alpine:3.18",
        "matchType": "EXACT"
      },
      "updates": {
        "identifier": "docker-image://docker.io/library/alpine:3.18@sha256:0000000000000000000000000000000000000000000000000000000000000000"
      }
    }
  ]
}

---

[TestPinDryRun/ghcr - 1]
{
  "version": 1,
  "rules": [
    {
      "action": "CONVERT",
      "selector": {
        "identifier": "docker-image://ghcr.io/actions/actions-runner:latest",
        "matchType": "EXACT"
      },
      "updates": {
        "identifier": "docker-image://ghcr.io/actions/actions-runner:latest@sha256:0000000000000000000000000000000000000000000000000000000000000000"
      }
    }
  ]
}

---

[TestPinDryRun/scratch - 1]
{
  "version": 1,
  "rules": [
    {
      "action": "CONVERT",
      "selector": {
        "identifier": "docker-image://golang:1.21",
        "matchType": "EXACT"
      },
      "updates": {
        "identifier": "docker-image://docker.io/library/golang:1.21@sha256:0000000000000000000000000000000000000000000000000000000000000000"
      }
    }
  ]
}

---
